<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.twofold</groupId>
    <artifactId>valen</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>valen-app</module>
        <module>valen-core</module>
        <module>valen-export-dds</module>
        <module>valen-export-gltf</module>
        <module>valen-export-png</module>
        <module>valen-export</module>
        <module>valen-game-doom</module>
        <module>valen-game-eternal</module>
        <module>valen-game-source1</module>
        <module>valen-gltf</module>
        <module>valen-jlink</module>
        <module>valen-ui</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <dapper.version>2.41.2</dapper.version>
        <javafx.version>21.0.4</javafx.version>
        <immutables.version>2.10.1</immutables.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>io.github.jbock-java</groupId>
                            <artifactId>dapper-compiler</artifactId>
                            <version>${dapper.version}</version>
                        </path>
                        <dependency>
                            <groupId>org.immutables</groupId>
                            <artifactId>value</artifactId>
                            <version>${immutables.version}</version>
                        </dependency>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.2.0</version>
                <extensions>true</extensions>
                <configuration>
                    <compress>zip-9</compress>
                    <includeLocales>en</includeLocales>
                    <launcher>valen=valen.app/be.twofold.valen.Main</launcher>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <stripDebug>true</stripDebug>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- Testing for all -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!-- Project -->
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-dds</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-gltf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export-png</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-export</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-game-doom</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-game-eternal</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-game-source1</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-gltf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>valen-ui</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External -->
            <dependency>
                <groupId>be.twofold</groupId>
                <artifactId>tinybcdec</artifactId>
                <version>0.1.1</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.11.0</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.google.errorprone</groupId>
                        <artifactId>error_prone_annotations</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>io.github.jbock-java</groupId>
                <artifactId>dapper</artifactId>
                <version>${dapper.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-jpms</artifactId>
                <version>5.14.0</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <!-- Annotations -->
            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>${immutables.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.10.3</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.26.3</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
